--- a/src/app/modules/define-pages/menu-config/menu-config.component.html
+++ b/src/app/modules/define-pages/menu-config/menu-config.component.html
@@ -43,44 +43,44 @@
         </div>        
         <div class="main" *ngFor="let item of DATA; let i = index;">
                 <div class="child">
-                    <app-edit-input [data]="item.PageTitle" (tried)="getoldvalue($event)" (focusOut)='updateActive("PageTitle",item,$event)'>
-                    </app-edit-input>
+                    <album-edit-input [data]="item.PageTitle" (tried)="getoldvalue($event)" (focusOut)='updateActive("PageTitle",item,$event)'>
+                    </album-edit-input>
                 </div>
                 <div class="child">
-                    <app-edit-input [data]="item.ParentPage" (tried)="getoldvalue($event)" (focusOut)='updateActive("ParentPage",item,$event)'>
-                    </app-edit-input>
+                    <album-edit-input [data]="item.ParentPage" (tried)="getoldvalue($event)" (focusOut)='updateActive("ParentPage",item,$event)'>
+                    </album-edit-input>
                 </div>
                 <div class="child">
-                    <app-edit-input [data]="item.faIcon" (tried)="getoldvalue($event)" (focusOut)='updateActive("faIcon",item,$event)'>
-                    </app-edit-input>
+                    <album-edit-input [data]="item.faIcon" (tried)="getoldvalue($event)" (focusOut)='updateActive("faIcon",item,$event)'>
+                    </album-edit-input>
                 </div>
                 <div class="child">
-                    <app-edit-input [data]="item.link" (tried)="getoldvalue($event)" (focusOut)='updateActive("link",item,$event)'>
-                    </app-edit-input>
+                    <album-edit-input [data]="item.link" (tried)="getoldvalue($event)" (focusOut)='updateActive("link",item,$event)'>
+                    </album-edit-input>
                 </div>
                 <div class="child">
-                    <app-edit-input [data]="item.label" (tried)="getoldvalue($event)" (focusOut)='updateActive("label",item,$event)'>
-                    </app-edit-input>
+                    <album-edit-input [data]="item.label" (tried)="getoldvalue($event)" (focusOut)='updateActive("label",item,$event)'>
+                    </album-edit-input>
                 </div>
                 <div class="child">
-                    <app-edit-input [data]="item.DisplayOrder" (tried)="getoldvalue($event)" (focusOut)='updateActive("DisplayOrder",item,$event)'>
-                    </app-edit-input>
+                    <album-edit-input [data]="item.DisplayOrder" (tried)="getoldvalue($event)" (focusOut)='updateActive("DisplayOrder",item,$event)'>
+                    </album-edit-input>
                 </div>
                 <div class="child">
-                    <app-edit-input [data]="item.HasSubmenu" (tried)="getoldvalue($event)" (focusOut)='updateActive("HasSubmenu",item,$event)'>
-                    </app-edit-input>
+                    <album-edit-input [data]="item.HasSubmenu" (tried)="getoldvalue($event)" (focusOut)='updateActive("HasSubmenu",item,$event)'>
+                    </album-edit-input>
                 </div>
                 <div class="child">
-                    <app-edit-input [data]="item.IsTemplate" (tried)="getoldvalue($event)" (focusOut)='updateActive("IsTemplate",item,$event)'>
-                    </app-edit-input>
+                    <album-edit-input [data]="item.IsTemplate" (tried)="getoldvalue($event)" (focusOut)='updateActive("IsTemplate",item,$event)'>
+                    </album-edit-input>
                 </div>
                 <div class="child">
-                    <app-edit-input [data]="item.HomePage" (tried)="getoldvalue($event)" (focusOut)='updateActive("HomePage",item,$event)'>
-                    </app-edit-input>
+                    <album-edit-input [data]="item.HomePage" (tried)="getoldvalue($event)" (focusOut)='updateActive("HomePage",item,$event)'>
+                    </album-edit-input>
                 </div>
                 <div class="child">
-                    <app-edit-input [data]="item.Active" (tried)="getoldvalue($event)" (focusOut)='updateActive("Active",item,$event)'>
-                    </app-edit-input>
+                    <album-edit-input [data]="item.Active" (tried)="getoldvalue($event)" (focusOut)='updateActive("Active",item,$event)'>
+                    </album-edit-input>
                 </div>
                 <!-- <div class="child">
                     <button mat-mini-fab [id]="item.AlbumId" [name]="item.UpdatableName" matTooltip="DELETE"
