--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,2 +1,6 @@
-
+<div>
 <app-MultiLevelMenu></app-MultiLevelMenu>
+</div>
+<!-- <div>
+    <img height="400px" width="250px" src="../../../../assets/images/headerimg.svg">
+</div> -->
