--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -6,3 +6,7 @@
 //         //background-size: cover;
 //         //color          : white;
 //  }
+// :host{
+//     background: url('../../../../assets/images/leftimg.svg');
+
+//}
