--- a/src/app/modules/FeesManagement/classfee/dashboardclassfee/dashboardclassfee.component.html
+++ b/src/app/modules/FeesManagement/classfee/dashboardclassfee/dashboardclassfee.component.html
@@ -68,8 +68,8 @@
                 <ng-container matColumnDef="Amount">
                     <mat-header-cell *matHeaderCellDef> Amount </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <app-edit-input [data]="element.Amount|number:'1.2-2'" (tried)="getoldvalue($event)"
-                            (focusOut)='updateAmount(element,$event)'></app-edit-input>
+                        <FeeEditInput [data]="element.Amount|number:'1.2-2'" (tried)="getoldvalue($event)"
+                            (focusOut)='updateAmount(element,$event)'></FeeEditInput>
                     </mat-cell>
                 </ng-container>
 <!-- 
@@ -93,8 +93,8 @@
                 <ng-container matColumnDef="PaymentOrder">
                     <mat-header-cell *matHeaderCellDef> Payment Order </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <app-edit-input [data]="element.PaymentOrder" (tried)="getoldvalue($event)"
-                            (focusOut)='updatePaymentOrder(element,$event)'></app-edit-input>
+                        <FeeEditInput [data]="element.PaymentOrder" (tried)="getoldvalue($event)"
+                            (focusOut)='updatePaymentOrder(element,$event)'></FeeEditInput>
                     </mat-cell>
                 </ng-container>
 
