--- a/src/app/modules/define-pages/displaypage/displaypage.component.html
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.html
@@ -1,13 +1,13 @@
+
 <mat-card class="contentbody">
     <mat-card-title>{{Title|titlecase}}</mat-card-title>
     <mat-card-subtitle *ngIf="ParentPage.length>0">{{ParentPage}} > {{Title}}</mat-card-subtitle>
     <mat-card-content>
-        <br>
         <!-- <mat-progress-spinner *ngIf="loading" class="example-margin" [color]="color" [mode]="mode" [value]="value">
         </mat-progress-spinner> -->
         <mat-spinner *ngIf="loading"></mat-spinner>
-        <div class="container">
-            <div class="child1">
+        <div>
+            <div>
                 <p [innerHTML]="PageBody|encodeHTML"></p>
             </div>
             <!-- <div class="child2">
