--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -1,14 +1,12 @@
 <app-header [deviceXs]="deviceXs" (toggleSideBarForme)="sideBarToggler()"></app-header>
-<mat-drawer-container class="example-container" [hasBackdrop]="false">
-    <mat-drawer class="left" [mode]="mode" [opened]="openSideBar">
+<mat-drawer-container [hasBackdrop]="false">
+    <mat-drawer [mode]="mode" [opened]="openSideBar" [ngClass]="contentcls">
         <app-sidebar></app-sidebar>
     </mat-drawer>
-    <mat-drawer-content class="content">
+    <mat-drawer-content fxLayout="row" fxLayoutAlign="space-between start" [ngClass]="contentcls" >
         <alert></alert>
-        <div style="padding:0px" fxLayoutAlign="space-between start" fxLayout="row" fxLayoutGap="8px">
-            <router-outlet></router-outlet>
-            <app-right></app-right>
-        </div>
+        <router-outlet></router-outlet>
+        <app-right></app-right>
     </mat-drawer-content>
 </mat-drawer-container>
 <app-footer></app-footer>
