--- a/src/app/shared/components/right/right.component.html
+++ b/src/app/shared/components/right/right.component.html
@@ -1,4 +1,3 @@
-<div class="content">
-    <app-newsdashboard></app-newsdashboard>
-    
+<div *ngIf="!deviceXs" class="content">
+    <app-newsdashboard></app-newsdashboard>    
 </div>
