--- a/src/app/modules/define-pages/displaypage/displaypage.component.scss
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.scss
@@ -1,11 +1,12 @@
 :host{
     width: 100%;
+    //margin-top:50px;
 }
 mat-card-subtitle{
     color:orange;
 }
 .contentbody{
-    //top:35px;
+    padding: 25px;
     background-color:#20639b;
     color:white;
 //    width: 100%;
