--- a/src/app/modules/photogallery/photobrowser/photobrowser.component.html
+++ b/src/app/modules/photogallery/photobrowser/photobrowser.component.html
@@ -2,18 +2,51 @@
   <mat-card-title>Photo Gallery</mat-card-title>
   <mat-card-content>
     <!-- <form [formGroup]="searchForm"> -->
-      <mat-spinner *ngIf="loading"></mat-spinner>
-    <div>
-      <mat-form-field fxFlex="82">
-        <input matInput (keyup)="applyFilter($any($event.target).value)" placeholder="Search album" autocomplete="off">
-      </mat-form-field>
+    <mat-spinner *ngIf="loading"></mat-spinner>
+    <!-- <div style="width: 100%;" fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="100px"> -->
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($any($event.target).value)" placeholder="Search album" autocomplete="off">
+    </mat-form-field>
+
+    <div fxLayout="row wrap" fxLayoutGap="100px" fxLayoutAlign="space-between start">
+      <div fxLayout="row" fxLayoutAlign="none" *ngFor="let album of Albums" (click)="view(album.FileId)">
+        <div fxLayout="row" fxLayoutAlign="none"  *ngFor="let photo of album.photos;let i=index;" style="margin-bottom: 25px;border:1px solid white">
+          <div class="zero" *ngIf="i<2" fxLayout="row" fxLayoutAlign="none">
+            <img [src]="photo.PhotoPath" *ngIf="i<2" [width]="photo.Width" [height]="photo.Width">
+          </div>
+          <div class="zero" *ngIf="i>1" fxLayout="row" fxLayoutAlign="none">
+            <img [src]="photo.PhotoPath" *ngIf="i>1" [width]="photo.Width" [height]="photo.Width">
+          </div>
+        </div>
+      </div>
     </div>
-    <div fxLayout="row wrap" fxLayoutGap="30px">
-      <span class="childMatcard" (click)="view(album.FileId)" *ngFor="let album of Albums;let i=index"
-        [style.backgroundColor]="changeColor(i)">
+
+
+    <!-- <div fxLayout="row wrap" fxLayoutAlign="space-between start" fxLayoutGap="32px">
+      <div *ngFor="let album of Albums" (click)="view(album.FileId)">
+        <mat-grid-list cols="2" rowHeight="150px" *ngFor="let photo of album.photos;let i=index;">
+          <mat-grid-tile colspan="1" rowspan="1">
+            <img [src]="photo.PhotoPath" width="100px" height="100px">
+          </mat-grid-tile>
+        </mat-grid-list>
+      </div>
+    </div> -->
+    <!-- </div> -->
+    <!-- 
+    <div fxLayout="row wrap" fxLayoutAlign="space-around center" fxLayoutGap="100px">
+      <div (click)="view(album.FileId)" *ngFor="let album of Albums">
+        <mat-grid-list [cols]="2">
+          <mat-grid-tile [colspan]="photo.Cols" [rowspan]="photo.Rows" *ngFor="let photo of album.photos;let i=index;">
+            <img [src]="photo.PhotoPath" *ngIf="i<6">
+          </mat-grid-tile>
+        </mat-grid-list>
+     
         {{album.UpdatedFileFolderName|slice:0:30}}<span *ngIf="album.UpdatedFileFolderName.length>30">...</span>
-      </span>
-    </div>
+      </div>
+    </div> -->
 
   </mat-card-content>
 </mat-card>
+<!-- <div *ngFor="let photo of album.photos" style="border: 0px; padding: 0px;">
+          <img [src]="photo.PhotoPath" width="100px" height="100px">
+        </div> -->
