website revamp done document upload done

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div>
-<app-MultiLevelMenu></app-MultiLevelMenu>
+<app-MultiLevelMenu (openLeftMenu)="open($event)"></app-MultiLevelMenu>
 </div>
 <!-- <div>
     <img height="400px" width="250px" src="../../../../assets/images/headerimg.svg">
